--- a/app/entities/new.jade
+++ b/app/entities/new.jade
@@ -4,7 +4,8 @@ p First, create an Entity to represent some level of information you want to sto
  
 p An entity is like a category, a class, a genre, a type.... It will spawn objects, which are like, well, objects, or instances for the dev guys.
 
-dynamic-list-input(items="entities" default-item="defaultEntity")
+dynamic-list-input(items="entities" default-item="defaultEntity" item-property="name")
+  input.form-control(type="text" name="itemName" ng-model="item.name" value="{{item.name}}" placeholder="Entity Name (e.g. Product, Feature, User Story, Data...)")
 
 //- div(ng-repeat="entity in entities")
 //-   input(value="{{entity.name}}")
