Ongoing work committed

--- a/app/entities/edit.jade
+++ b/app/entities/edit.jade
@@ -4,6 +4,8 @@ p First, create an Entity to represent some level of information you want to sto
  
 p An entity is like a category, a class, a genre, a type.... It will spawn objects, which are like, well, objects, or instances for the dev guys.
 
-dynamic-list-input(items="entities" default-item="defaultEntity" item-property="name")
+react-list-input(items="entities" default-item="defaultEntity" item-property="name")
   input.form-control(type="text" name="itemName" ng-model="item.name" value="{{item.name}}" placeholder="Entity Name (e.g. Product, Feature, User Story, Data...)")
 
+button.btn.btn-primary(ng-click="saveEntities()").
+  Save
