Ongoing work implementing interactions with entities

--- a/app/entities/edit.jade
+++ b/app/entities/edit.jade
@@ -7,5 +7,5 @@ p An entity is like a category, a class, a genre, a type.... It will spawn objec
 react-list-input(items="entities" default-item="defaultEntity" item-property="name")
   input.form-control(type="text" name="itemName" ng-model="item.name" value="{{item.name}}" placeholder="Entity Name (e.g. Product, Feature, User Story, Data...)")
 
-button.btn.btn-primary(ng-click="saveEntities()").
+button.btn.btn-primary(ng-click="createEntity()").
   Save
